Most refactoring of PXR module to new core and project API.